# ros2_demo_ws

./: .gitignore  AGENTS.md  DEBUG.md  README.md  TEST.md  THINK.md
scripts/: run_tests.sh
src/simple_ros_demo/: CMakeLists.txt  package.xml  package.xml.bak.txt  setup.cfg  setup.py
src/simple_ros_demo/simple_ros_demo/: sim_velocity_publisher.py  speed_service_server.py  velocity_subscriber.py
src/simple_ros_demo/simple_ros_demo/srv/: SetSpeed.srv  __init__.py
src/simple_ros_demo/test/: test_copyright.py  test_flake8.py  test_pep257.py  test_publisher_rate_launch.py  test_speed_service_launch.py  test_subscriber_lifecycle_launch.py
