<?xml version="1.0"?>
<package format="3">
  <name>simple_ros_demo</name>
  <version>0.0.0</version>
  <description>Simple ROS2 demo with pub/sub/service</description>
  <maintainer email="reed@email.com">Reed</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <rosidl_generate_interfaces>simple_ros_demo</rosidl_generate_interfaces> -->
  </export>
</package>